force-app/main/default/objects/NC_Account_Publish__e/NC_Account_Publish__e.object-meta.xml
<CustomObject>
    <label>Noncredit Account Creation</label>
    <pluralLabel>Noncredit Account Creations</pluralLabel>
</CustomObject>