force-app/main/default/objects/NC_Account_Publish__e/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <label>Address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>