force-app/main/default/objects/NC_Account_Publish__e/fields/CSU_ID__c.field-meta.xml
<CustomField>
    <fullName>CSU_ID__c</fullName>
    <description>CSU ID</description>
    <label>CSU ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>