force-app/main/default/objects/NC_Account_Publish__e/fields/IsCompany__c.field-meta.xml
<CustomField>
    <fullName>IsCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCompany</label>
    <type>Checkbox</type>
</CustomField>