force-app/main/default/objects/NC_Account_Publish__e/fields/Noncredit_ID__c.field-meta.xml
<CustomField>
    <fullName>Noncredit_ID__c</fullName>
    <label>Noncredit ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>