force-app/main/default/objects/NC_Account_Publish__e/fields/Phone1__c.field-meta.xml
<CustomField>
    <fullName>Phone1__c</fullName>
    <label>Phone1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>