force-app/main/default/objects/NC_Account_Publish__e/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <label>Phone2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>