force-app/main/default/objects/NC_Account_Publish__e/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>80</length>
    <type>Text</type>
</CustomField>